# agentstop

./: .gitignore  README.md  docker-compose.yml  docker-helper.txt  example-docker-env  example-local-env  install-docker.sh  install.sh
ai-server/: .dockerignore  .flake8  Makefile  README.md  dockerfile  pyproject.toml
ai-server/app/: api.py  main.py
ai-server/app/agent/: agent_controller.py  agent_service.py  agent_type.py  reference.py  supervisor.py
ai-server/app/chat/: chat_controller.py  chat_service.py  chat_type.py
ai-server/app/health/: health.py
ai-server/app/mongodb/campaign/: campaign_service.py  campaign_type.py
ai-server/app/mongodb/user/: user_controller.py  user_service.py  user_type.py
ai-server/app/rag/: DOCS.txt  README.md  __init__.py  document_processor.py  example_usage.py  external_example_usage.py  external_query_service.py  ingestion_service.py  query_service.py  rag.py  rag_controller.py  rag_types.py  rag_utils.py  test.md
ai-server/app/shared/aws/: aws_s3.py
ai-server/app/shared/config/: asyncio.py  config.py
ai-server/app/shared/constant/: path_constant.py
ai-server/app/shared/context/: context_store.py
ai-server/app/shared/database/: mongodb_db.py  redis_db.py
ai-server/app/shared/dependencies/: instance.py
ai-server/app/shared/logger/: logger.py  logger_type.py
ai-server/app/shared/types/: error_type.py  return_type.py
ai-server/app/shared/utils/: error_util.py  return_util.py
ai-server/app/tools/: tools_args.md  tools_config.json
ai-server/scripts/: clear_cache.py  start.py
backend/: .dockerignore  (+5 more)
(+786 files in other folders)
